src/objects/AB2__OpportunityABRep__c.object
<CustomObject>
    <description>AdBook configured Contact groups for Opportunities.
Associates the Opportunity to AB2__Rep__c records.</description>
    <fields>
        <fullName>AB2__AdBookRepType__c</fullName>
        <description>The AdBook Rep Type Name</description>
        <formula>AB2__Rep__r.AB2__RepTypeListName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The AdBook Rep Type Name</inlineHelpText>
        <label>AdBook Rep Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityIdDynamicPropertyIdUnique__c</fullName>
        <description>Concatenation of the Opportunity Id and the AdBook Rep Type Id.
Used to enforce uniqueness via a field workflow rule that will set the value.</description>
        <inlineHelpText>Used internally to enforce uniqueness for Opportunity ID and AdBook Rep Type Is</inlineHelpText>
        <label>OpportunityIdAdBookRepTypeIdUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AB2__Opportunity__c</fullName>
        <description>Master Detail relationship to the parent Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_AB_Reps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The AdBook Rep</description>
        <label>Rep</label>
        <referenceTo>AB2__Rep__c</referenceTo>
        <relationshipName>Opportunity_AB_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AdBook Opportunity Rep</label>
    <nameField>
        <label>AdBook Rep Name – Rep Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook Opportunity Reps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AB2__Required</fullName>
        <active>true</active>
        <description>Ensure the Rep relationship is defined</description>
        <errorConditionFormula>ISBLANK( AB2__Rep__c)</errorConditionFormula>
        <errorDisplayField>AB2__Rep__c</errorDisplayField>
        <errorMessage>Rep is required</errorMessage>
    </validationRules>
</CustomObject>